--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,72 @@
 body {
     margin: 0;
     padding: 0;
-    width: 1440px;
+    /* width: 400px;
+    height: 400px; */
     background-color: #674bb1;
     background-image: url('https://raw.githubusercontent.com/bianorcode/landing-page-con-unica-seccion-de-introduccin/5a61ab69b21631955ded4680aa1122652ceca270/images/bg-desktop.svg');
+    background-repeat: no-repeat;
+}
+body .logo {
+    margin: 50px;
+}
+header {
+    width: 100%;
+    height: 60px;
+}
+main {
+    margin-top: 80px;
+    width: 100%;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+}
+main .main-left {
+    justify-self: left;
+    margin: 0 60px;
+}
+main .main-right {
+    justify-self: right;
+    width: 530px;
+    height: 450px;
+}
+h1 {
+    font-family: 'Poppins';
+    font-size: 35px;
+    color: ivory;
+}
+p {
+    font-family: 'Open Sans';
+    color: ivory;
+    font-size: 18px;
+}
+button {
+    padding: 20px;
+    width: 200px;
+    border-radius: 100px;
+    border-color: white;
+}
+button .button {
+    color: #674bb1;
+    font-size: 18px;
+}
+footer nav {
+    /* width: auto; */
+    display: flex;
+    justify-content: flex-end;
+}
+footer nav .footer-right-section {
+    width: 150px;
+    height: auto;
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+footer .footer-right-section a {
+    margin-right: 30px;
+    color: ivory;
+    font-size: 21px;
 }
